# vicare-automation-server

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  LICENSE  log-config.json  pyproject.toml  readme.md
.agents/skills/release-version/: SKILL.md
.github/: dependabot.yml
.github/workflows/: dockerimage.yml  lint-and-test.yml
app/: dependencies.py  main.py  request_tracking.py  settings.py
app/api/: appletv.py  circuit.py  dhw.py  health.py  heating.py  heating_dhw.py  heatpump.py  heatpump_circuit.py  loxone.py  types.py  ventilation.py
tests/: conftest.py  test_dependencies.py  test_main.py  test_request_tracking.py  test_settings.py
tests/api/: test_appletv.py  test_circuit.py  test_dhw.py  test_health.py  test_heating_dhw.py  test_heatpump.py  test_heatpump_circuit.py  test_loxone.py  test_ventilation.py
