[tool.poetry]
name = "vicare-automation-server"
version = "0.1.0"
description = "A lightwight fast api server, in order to access and manipulate ViCare products"
license = "MIT"
authors = ["Andreas Schmid <service@aaschmid.de>"]
readme = "readme.md"
homepage = "https://github.com/aaschmid/vicare-automation-server"
repository = "https://github.com/aaschmid/vicare-automation-server"
packages = [
  { include = "vicare_automation_server" }
]
include = ["LICENSE"]
keywords = ["packaging", "dependency", "poetry"]
classifiers = [
  "Topic :: Home Automation",
  "Topic :: System :: Monitoring",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/aaschmid/vicare-automation-server/releases"
"Bug Tracker" = "https://github.com/aaschmid/vicare-automation-server/issues"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"
pyvicare = "^2.30.0"
requests = "^2.31.0" # required for pyvicare - don't know why it is not included automatically

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
httpx = "^0.26.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
extend-select = ["B", "Q"]
ignore = []

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py312"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
