[project]
name = "vicare-automation-server"
version = "0.1.0"
description = "A lightwight fast api server, in order to access and manipulate ViCare products"
license = {text = "MIT"}
authors = [{name = "Andreas Schmid", email = "service@aaschmid.de"}]
readme = "readme.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "pydantic-settings>=2.7.1,<2.8.0",
    "pyvicare>=2.40.0,<2.41.0",
    "requests>=2.32.3,<2.33.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1,<24.0.0",
    "httpx>=0.26.0,<0.27.0",
    "isort>=5.13.2,<5.14.0",
    "mypy>=1.8.0,<1.9.0",
    "pytest>=7.4.3,<7.5.0",
    "pytest-cov>=4.1.0,<4.2.0",
    "pytest-mock>=3.12.0,<3.13.0",
    "ruff>=0.1.9,<0.2.0",
]

[project.urls]
Homepage = "https://github.com/aaschmid/vicare-automation-server"
Repository = "https://github.com/aaschmid/vicare-automation-server"
Changelog = "https://github.com/aaschmid/vicare-automation-server/releases"
"Bug Tracker" = "https://github.com/aaschmid/vicare-automation-server/issues"

[build-system]
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
extend-select = ["B", "Q"]
ignore = []

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py312"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
