[project]
name = "vicare-automation-server"
version = "0.4.1"
description = "A lightwight fast api server, in order to access and manipulate ViCare products"
license = {text = "MIT"}
authors = [{name = "Andreas Schmid", email = "service@aaschmid.de"}]
readme = "readme.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "pyvicare>=2.59.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "httpx>=0.26.0",
    "isort>=5.13.2",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.10",
]

[project.urls]
Homepage = "https://github.com/aaschmid/vicare-automation-server"
Repository = "https://github.com/aaschmid/vicare-automation-server"
Changelog = "https://github.com/aaschmid/vicare-automation-server/releases"
"Bug Tracker" = "https://github.com/aaschmid/vicare-automation-server/issues"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["B", "Q"]
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint.mccabe]
max-complexity = 10
